# IRIS_search

./: .gitignore  =3.8.0  CODE_ANALYSIS_REPORT.md  FINAL_VALIDATION_REPORT.md  IRIS.md  IRIS_Tutorial.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  build_milvus.sh  pyproject.toml  requirements.txt  setup.sh  start.sh  start_IRIS.sh  start_Web.sh  test_chunk_features.py  test_new_services.py  test_pdf_fix.py  test_pdf_processing.py  vllm_serve_llama.sh  vllm_serve_qwen_embed.sh  web_plan.md
config/ultrarag/templates/: offline_build_index_watch_parameter.yaml.template  online_rag_qa_batch_parameter.yaml.template
configs/: config.yaml  config_ex.yaml  questions.txt
configs/systemd/: iris-scheduler.service
configs/ultrarag/pipelines/: offline_build_index.yaml  online_rag_qa.yaml
configs/ultrarag/templates/: offline_build_index_parameter.yaml.template  online_rag_qa_parameter.yaml.template
scripts/: arxiv_search.py  iris_query.py  migrate_to_sqlite.py  run_update_cycle.py  run_web.py
services/: __init__.py  arxiv_service.py  deploy_server.py  deploy_service.py  email_service.py  index_service.py  paper_service.py  qa_service.py
src/: exceptions.py
src/common/: __init__.py  constants.py  logging_config.py  path_utils.py  retry.py
src/config/: __init__.py  loader.py  models.py  validator.py
src/core/: __init__.py  index_service.py  orchestrator.py  prompt_templates.py  qa_service.py  retriever.py
src/infrastructure/: __init__.py  base.py  document_processor.py  embedding_service.py  milvus_service.py  reranker_service.py
src/scheduler/: __init__.py  scheduler_manager.py  scheduler_orchestrator.py  task_executor.py  task_models.py  task_service.py
src/services/: __init__.py  arxiv_service.py  deploy_service.py  paper_service.py
src/web/: __init__.py  app.py  dependencies.py  exceptions.py  loaders.py  models.py  template_config.py
src/web/routers/: __init__.py  api_routes.py  qa_routes.py  scheduler_routes.py  web_routes.py
src/web/static/css/: scheduler.css  style.css
src/web/static/js/: main.js  qa-chat.js  scheduler.js
src/web/templates/: base.html  detail.html  error.html  index.html
src/web/templates/components/: qa_chat.html
src/web/templates/scheduler/: index.html
utils/: __init__.py  helpers.py
