[project]
name = "iris-search"
version = "1.2.0"
description = "IRIS - Intelligent Research Information System: AI-powered literature monitoring and knowledge extraction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "IRIS Team" }
]
keywords = ["arxiv", "literature", "RAG", "vector-database", "LLM"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Dependencies
    "arxiv>=1.4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # PDF parsing
    "pymupdf>=1.23.0",

    # Text chunking
    "chonkie>=0.3.0",
    "nltk>=3.8.0",  # Sentence splitting

    # Milvus vector database
    "pymilvus>=2.3.0",

    # Embedding (vLLM OpenAI compatible API)
    "openai>=1.12.0",

    # Reranker (CrossEncoder)
    "sentence-transformers>=2.3.0",

    # Data Processing
    "numpy>=1.24.0",

    # Task scheduling
    "apscheduler>=3.10.0",

    # Logging
    "tqdm>=4.65.0",

    # Web Interface Dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
# GPU acceleration
gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

# External API providers (optional)
external-apis = [
    "cohere>=5.0.0",
    "anthropic>=0.18.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# All optional dependencies
all = [
    "iris-search[gpu,external-apis,dev]",
]

[project.scripts]
iris = "scripts.run_update_cycle:main"
iris-query = "scripts.iris_query:main"
iris-web = "scripts.run_web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
